# pylox-fine-tune-pipeline

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: notify-engagement.yml
benchmark/: academic.py  adhoc.py  cost.py  judge.py  judge_gen.py  performance.py  report.py  report_template.md.j2  runner.py
benchmark/domain/: __init__.py  code.py  finance.py  legal.py  medical.py
configs/: tier-32b-gemma.yml  tier-32b-qwen.yml  tier-70b-llama.yml  tier-8b-llama.yml
configs/extra_benchmarks/: EXAMPLE.yml
deploy/: launcher.py  runpod.py  runpod_client.py  spark.py
enrich/: augment.py  dedup.py  gptoss_client.py  pipeline.py  quality.py  redact.py
eval/: llm_judge.py  report.md.j2  runner.py  samples.py
intake/: format_chat.py  sanitize_sample.py  validate.py
ops/: .trtllm_pids  api_keys.py  cloudflare_dns.py  cuda_compat.py  gptoss_lifecycle.py  memory_guard.py  provision_endpoint.py  stripe_billing.py
train/: qlora.py
