[project]
name = "pylox-fine-tune-pipeline"
version = "0.1.0"
description = "Pylox Systems — on-prem LLM fine-tune + deploy pipeline for NVIDIA DGX Spark"
authors = [{ name = "Emilio Girard", email = "emilio@pyloxsystems.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "bitsandbytes>=0.43",
    "accelerate>=0.30",
    "datasets>=2.16",
    "sentence-transformers>=2.7",
    "pyyaml>=6.0",
    "click>=8.1",
    "jinja2>=3.1",
    "httpx>=0.27",
    "boto3>=1.34",
    "tqdm>=4.66",
    "rich>=13.7",
]

[project.optional-dependencies]
billing = ["stripe>=7.0"]
dev = ["ruff>=0.5", "pytest>=7"]

[project.scripts]
pylox-pipeline = "cli:cli"

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli"]
packages = ["configs", "intake", "enrich", "train", "eval", "deploy", "ops"]
